# Open-SSTV

./: .gitignore  CHANGELOG.md  README.md  SSTV_App_User_Guide.md  open_sstv.spec  pyproject.toml
.github/workflows/: build-windows.yml  build.yml
docs/: architecture.md  audit_opus_1m_v0.1.26.md  audit_opus_4.7_v0.2.9.md  decoder-algorithm.md  future_work.md  hamlib-integration-notes.md  index.html  missing_modes_research.md  rigctld-protocol.md  waterfall_scope.md
docs/design/: v0.3_templates.md
packaging/: macos-entitlements.plist
scripts/: gen_test_wavs.py  roundtrip_all_modes.py
src/open_sstv/: __init__.py  __main__.py  app.py  security.py
src/open_sstv/assets/templates/: cq_de_call.toml  cqsstv.toml  cqsstv_vertical.toml  reply_exchange.toml  reply_simple.toml  seventy_three.toml  seventy_three_card.toml  seventy_three_vertical.toml
src/open_sstv/audio/: devices.py  input_stream.py  output_stream.py
src/open_sstv/cli/: __init__.py  decode.py  encode.py
src/open_sstv/config/: __init__.py  schema.py  store.py  templates.py
src/open_sstv/core/: __init__.py  banner.py  cw.py  decoder.py  demod.py  dsp_utils.py  encoder.py  incremental_decoder.py  modes.py  robot36_dsp.py  slant.py  sync.py  vis.py
src/open_sstv/radio/: base.py  rigctld.py  serial_rig.py
src/open_sstv/templates/: __init__.py  filename.py  fonts.py  manager.py  migration.py  model.py  renderer.py  tokens.py  toml_io.py
src/open_sstv/ui/: __init__.py  draw_text.py  first_launch_dialog.py  image_editor.py  image_gallery.py  main_window.py  qso_state_widget.py  qso_template_bar.py  quick_fill_dialog.py  radio_panel.py  rx_panel.py  settings_dialog.py  template_editor.py  template_editor_dialog.py  template_gallery.py  tx_panel.py  update_checker.py  utils.py  workers.py
src/sstv_app/: __init__.py  __main__.py  app.py
src/sstv_app/audio/: __init__.py  devices.py  input_stream.py  output_stream.py
src/sstv_app/cli/: decode.py  encode.py
src/sstv_app/config/: __init__.py  schema.py  store.py  templates.py
src/sstv_app/core/: __init__.py  decoder.py  demod.py  dsp_utils.py  encoder.py  modes.py  slant.py  sync.py  vis.py
src/sstv_app/radio/: __init__.py  base.py  exceptions.py  rigctld.py  serial_rig.py
src/sstv_app/ui/: image_editor.py  image_gallery.py  main_window.py  qso_template_bar.py  quick_fill_dialog.py  radio_panel.py  rx_panel.py  settings_dialog.py  template_editor_dialog.py  tx_panel.py  waterfall_widget.py  workers.py
tests/: conftest.py  test_security.py  test_version.py
tests/audio/: test_devices.py  test_input_stream.py  test_output_stream.py
tests/cli/: test_decode.py  test_encode.py
tests/config/: test_store.py  test_templates.py
tests/core/: test_banner.py  test_cw.py  test_decoder.py  test_demod.py  test_dsp_utils.py  test_encoder.py  test_incremental_decoder.py  test_new_modes.py  test_slant.py  test_sync.py  test_vis.py
tests/radio/: fake_rigctld.py  test_rigctld_client.py  test_serial_rig.py
tests/templates/: test_filename.py  test_fonts.py  test_manager.py  test_migration.py  test_renderer.py  test_tokens.py  test_toml_io.py  test_v3_tokens.py
tests/ui/: test_draw_text.py  test_first_launch_dialog.py  test_image_editor.py  test_image_gallery.py  test_main_window.py  test_qso_state_widget.py  test_radio_panel.py  test_rx_to_tx_pipeline.py  test_rx_worker.py  test_settings_dialog.py  test_template_editor_dialog.py  test_template_editor_rainbow_text.py  test_template_editor_rx_image.py  test_template_gallery.py  test_tx_center_crop.py  test_tx_panel.py  test_tx_worker.py  test_update_checker.py  test_v3_tx_integration.py
